show/hide stuff for print

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
           <li class="name">
-            <h1 class="hide"><a href="#">East Harlem Neighborhood Plan</a></h1>
+            <h1 class="hide show-for-print"><a href="#">East Harlem Neighborhood Plan</a></h1>
           </li>
            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-          <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+          <li class="toggle-topbar menu-icon hide-for-print"><a href="#"><span></span></a></li>
         </ul>
 
         <section class="top-bar-section">
@@ -46,13 +46,9 @@
 
     <div class="row extra-padding-top">
       <div class="columns small-10 small-push-1 medium-6 medium-push-3 large-5 large-push-0">
-        <h1><img src="images/east-harlem-neighborhood-plan.gif" alt="East Harlem Neighborhood Plan" class="logo"></h1>
+        <h1 class="hide-for-print"><img src="images/east-harlem-neighborhood-plan.gif" alt="East Harlem Neighborhood Plan" class="logo"></h1>
       </div>
       <div class="columns small-12 large-7 extra-padding-top">
-        <!-- <p class="text-xlarge">East Harlem will soon be rezoned to allow the building of
-          more affordable housing. To make sure the community’s voice is heard in this
-          process, Speaker Melissa Mark-Viverito has initiated a Steering Committee to
-          create the East&nbsp;Harlem Neighborhood Plan.</p> -->
         <p class="text-large">Welcome! The goal of the East Harlem Neighborhood Plan
           is to develop a community-based vision and strategy for implementation.
           New York City Council Speaker Melissa Mark-Viverito along with Community
@@ -75,7 +71,7 @@
       <div class="columns large-5">
         <div class="row">
           <div class="columns small-4 medium-2 large-4">
-            <img src="images/process-workshop.png">
+            <img class="hide-for-print" src="images/process-workshop.png">
           </div>
           <div class="columns small-8 medium-10 large-8">
             <h4 class="some-padding-top"><span class="red">1</span> Community Visioning Workshops</h4>
@@ -85,12 +81,12 @@
         </div>
       </div>
       <div class="columns large-1 show-for-large-up">
-        <img src="images/process-arrow-right.png" class="extra-margin-top">
+        <img class="hide-for-print" src="images/process-arrow-right.png" class="extra-margin-top">
       </div>
       <div class="columns large-5 large-pull-1">
         <div class="row">
           <div class="columns small-4 medium-2 large-4">
-            <img src="images/process-meeting.png">
+            <img class="hide-for-print" src="images/process-meeting.png">
           </div>
           <div class="columns small-8 medium-10 large-8">
             <h4 class="some-padding-top"><span class="red">2</span> Steering Committee Meetings</h4>
@@ -103,7 +99,7 @@
 
     <div class="row show-for-large-up">
       <div class="columns large-1 large-centered">
-        <img src="images/process-arrow-downleft.png" class="some-margin-bottom">
+        <img class="hide-for-print" src="images/process-arrow-downleft.png" class="some-margin-bottom">
       </div>
     </div>
 
@@ -111,7 +107,7 @@
       <div class="columns large-5 large-push-1">
         <div class="row">
           <div class="columns small-4 medium-2 large-4">
-            <img src="images/process-presentation.png">
+            <img class="hide-for-print" src="images/process-presentation.png">
           </div>
           <div class="columns small-8 medium-10 large-8">
             <h4 class="some-padding-top"><span class="red">3</span> Public Presentation of Draft Plan</h4>
@@ -121,12 +117,12 @@
         </div>
       </div>
       <div class="columns large-1 large-push-1 show-for-large-up">
-        <img src="images/process-arrow-right.png" class="extra-margin-top">
+        <img class="hide-for-print" src="images/process-arrow-right.png" class="extra-margin-top">
       </div>
       <div class="columns large-5">
         <div class="row">
           <div class="columns small-4 medium-2 large-4">
-            <img src="images/process-final.png">
+            <img class="hide-for-print" src="images/process-final.png">
           </div>
           <div class="columns small-8 medium-10 large-8">
             <h4 class="some-padding-top"><span class="red">4</span> Final East Harlem Neighborhood Plan</h4>
