--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <ul class="dropdown">
                 <li><a href="#calendar">Calendar</a></li>
                 <li><a href="#documents">Documents</a></li>
+                <li><a href="#survey">Take Our Survey</a></li>
               </ul>
             </li>
             <li class=""><a href="#contact">Contact</a></li>
@@ -236,7 +237,7 @@
     <hr id="get-involved">
 
     <div class="row some-margin-bottom">
-      <div class="columns">
+      <div class="columns" id="survey">
         <h3>If you live or work in East Harlem, we want to hear from you.</h3>
       </div>
       <div class="columns medium-7">
