--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <br class="show-for-medium-up">
         <ul class="tiny-padding-top">
           <li><strong><a href="http://council.nyc.gov/d8/html/members/home.shtml">Council Speaker Melissa Mark-Viverito</a></strong> &mdash; <strong>(212) 788-9121</strong></li>
-          <li><strong><a href="http://www.nyc.gov/html/qnscb11/html/home/home.shtml">Manhattan Community Board 11</a></strong> &mdash; <strong>(212) 831-8929</strong></li>
+          <li><strong><a href="http://www.cb11m.org/">Manhattan Community Board 11</a></strong> &mdash; <strong>(212) 831-8929</strong></li>
           <li><strong><a href="http://www.cvhaction.org/">Community Voices Heard</a></strong> &mdash; <strong>(212) 860-6001</strong></li>
           <li><strong><a href="http://manhattanbp.nyc.gov/html/home/home.shtml">Manhattan Borough President Gale A. Brewer</a></strong> &mdash; <strong>(212) 669-8300</strong></li>
           <li><strong><a href="mailto:EHNhoodStudy@gmail.com">EHNhoodStudy@gmail.com</a></strong></li>
