add flickr feed

--- a/index.html
+++ b/index.html
@@ -264,6 +264,9 @@
           <iframe src="https://drive.google.com/embeddedfolderview?id=0B9LJ90BaDIDHflliN0hrRkJHd0QtMWRMOW5GRjEwSGlKak01OVhlLWU3SUw1QlRfbWdFc3M#list" width="800" height="600" frameborder="0"></iframe>
         </div>
         <a href="http://www.facebook.com/groups/EastHarlemForum/" class="button box-shadow"><img src="images/FB-f-Logo__blue_512.png" class="inline-icon"> East Harlem Forum</a>
+        <div class="flickr box-shadow">
+          <iframe src="http://www.flickr.com/photos/135123333@N08/20334040733/player/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+        </div>
       </div>
     </div>
 
