--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex"><!-- TODO: Remove this for search indexing -->
     <title>East Harlem Neighborhood Plan</title>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400italic,700italic,400,700|Pacifico" rel='stylesheet' type='text/css'> -->
-    <link href='https://fonts.googleapis.com/css?family=Chivo:400,900|Yesteryear' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400italic,700italic,400,700" rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Chivo:400,900|Yesteryear' rel='stylesheet' type='text/css'> -->
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
@@ -250,13 +250,12 @@
       </div>
     </div>
     <div class="row">
-      <div class="columns medium-5" id="calendar">
-        <h3 class="some-margin-bottom">Upcoming Public Meetings</h3>
+      <div class="columns medium-4" id="calendar">
+        <!-- <h3 class="some-margin-bottom">Upcoming</h3> -->
         <!-- Google Cal embed via http://sugi.github.io/jquery-gcal-flow/ -->
-        <!-- TODO: Link to the right GCal -->
         <div id="gcf-simple"></div>
       </div>
-      <div class="columns medium-7" id="documents">
+      <div class="columns medium-8" id="documents">
         <h3>Stay up to date!</h3>
         <p class="tiny-margin-bottom">We're still working on the East Harlem Neighborhood Plan. But here's
           the direction we are heading in so far.</p>
