--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div class="row">
       <div class="columns">
         <h3 class="some-margin-bottom">Steering Committee Members</h3>
-        <ul class="v-aligned-list small-block-grid-1 medium-block-grid-2 large-block-grid-4" data-equalizer data-options="equalize_on_stack: true">
+        <ul class="v-aligned-list small-block-grid-1 large-block-grid-3" data-equalizer data-options="equalize_on_stack: true">
           <li class="text-center"><a href="http://www.seiu32bj.org/"><div class="panel no-margin" data-equalizer-watch>32BJ SEIU</div></a></li>
           <li class="text-center"><a href="http://www.artimusnyc.com/"><div class="panel no-margin" data-equalizer-watch>Artimus Construction</div></a></li>
           <li class="text-center"><a href="http://unionsettlement.org/programs/business-development/"><div class="panel no-margin" data-equalizer-watch>Business Development Center&mdash;Union Settlement</div></a></li>
@@ -286,6 +286,7 @@
           <li class="text-center"><a href="https://www.harlemrbi.org/"><div class="panel no-margin" data-equalizer-watch>Harlem RBI</div></a></li>
           <li class="text-center"><a href="http://www.nyc.gov/html/nycha/html/residents/manhattanN.shtml"><div class="panel no-margin" data-equalizer-watch>Johnson Houses Tenant Association&mdash;Ethel Velez</div></a></li>
           <li class="text-center"><a href="http://www.local79.org/"><div class="panel no-margin" data-equalizer-watch>Local 79</div></a></li>
+          <li class="text-center"><a href="http://lottcdc.org/"><div class="panel no-margin" data-equalizer-watch>Lott CDC</div></a></li>
           <li class="text-center"><a href="http://manhattanbp.nyc.gov/html/home/home.shtml"><div class="panel no-margin callout" data-equalizer-watch><span class="label round alert">Project Partner</span><strong>Manhattan Borough President Gale Brewer</strong></div></a></li>
           <li class="text-center"><a href="http://www.nyam.org/"><div class="panel no-margin" data-equalizer-watch>New York Academy of Medicine</div></a></li>
           <li class="text-center"><a href="https://www.nyrp.org/"><div class="panel no-margin" data-equalizer-watch>New York Restoration Project</div></a></li>
