changes per Chelsea

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <h3 class="">Topics</h3>
         <div class="panel relative">
           <span class="corner-bubble">&#10102;</span>
-          <p class="no-margin"><strong>Open Space, Recreation, Culture</strong> <small class="jumbo"><em>led by NYRP</em></small></p>
+          <p class="no-margin"><strong>Open Space, Recreation</strong> <small class="jumbo"><em>led by NYRP</em></small></p>
           <p class="no-margin"><strong>Culture</strong> <small class="jumbo"><em>led by El Museo del Barrio</em></small></p>
         </div>
         <div class="panel relative">
@@ -196,8 +196,9 @@
         </div>
         <div class="panel relative">
           <span class="corner-bubble">&#10107;</span>
-          <p class="no-margin"><strong>Environment, Transportation, Safety</strong> <small class="jumbo"><em>led by WEACT</em></small></p>
+          <p class="no-margin"><strong>Environment, Transportation</strong> <small class="jumbo"><em>led by WEACT</em></small></p>
           <p class="no-margin"><strong>Health, Seniors</strong> <small class="jumbo"><em>led by New York Academy of Medicine</em></small></p>
+          <p class="no-margin"><strong>Safety</strong></p>
         </div>
       </div>
       <div class="columns">
@@ -263,7 +264,7 @@
         </div>
         <a href="http://www.facebook.com/groups/EastHarlemForum/" class="button box-shadow"><img src="images/FB-f-Logo__blue_512.png" class="inline-icon"> East Harlem Forum</a>
         <div class="flickr box-shadow">
-          <iframe src="http://www.flickr.com/photos/135123333@N08/20334040733/player/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+          <iframe src="http://www.flickr.com/photos/135123333@N08/20963622391/player/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
         </div>
       </div>
     </div>
