--- a/es/index.html
+++ b/es/index.html
@@ -46,9 +46,9 @@
 
     <div class="row extra-padding-top">
       <div class="columns small-10 small-push-1 medium-6 medium-push-3 large-5 large-push-0">
-        <h1 class="hide-for-print"><img src="../images/east-harlem-neighborhood-plan.gif" alt="East Harlem Neighborhood Plan" class="logo"></h1>
+        <h1 class="hide-for-print"><img src="../images/plan-comunitario-para-el-barrio.gif" alt="East Harlem Neighborhood Plan" class="logo"></h1>
       </div>
-      <div class="columns small-12 large-7 extra-padding-top">
+      <div class="columns small-12 large-7 tiny-padding-top">
         <p class="text-large">¡Bienvenidos! El objetivo del Plan Comunitario de East Harlem es el desarrollo de una visión basada en la comunidad y la estrategia para su implementación. La Presidenta del Concejo Municipal de la Ciudad de Nueva York, Melissa Mark-Viverito, junto con la Junta Comunal 11, Voces Comunitarias Escuchadas, y la Presidenta del Condado de Manhattan, Gale Brewer, están liderando un esfuerzo para involucrar a los residentes e interesados locales en conversaciones significativas sobre el futuro del este de Harlem.</p>
       </div>
     </div>
