remove survey, swap flickr photo

--- a/es/index.html
+++ b/es/index.html
@@ -30,7 +30,7 @@
               <ul class="dropdown">
                 <li><a href="#calendar">Calendario</a></li>
                 <li><a href="#documents">Documentos</a></li>
-                <li><a href="#survey">Responde la Encuesta</a></li>
+                <!-- <li><a href="#survey">Responde la Encuesta</a></li> -->
               </ul>
             </li>
             <li class=""><a href="#contact">Contacto</a></li>
@@ -205,18 +205,6 @@
 
     <hr id="get-involved">
 
-    <div class="row some-margin-bottom">
-      <div class="columns" id="survey">
-        <h3>Si vives o trabajas en el Este de Harlem, queremos saber de ti.</h3>
-      </div>
-      <div class="columns medium-7">
-        <p class="some-margin-bottom text-large">Por favor complete nuestra encuesta, asista los  talleres y eventos, y comparta sus valiosas ideas sobre nuestro&nbsp;proceso.</p>
-      </div>
-      <div class="columns medium-5">
-        <a class="button box-shadow" href="https://www.surveymonkey.com/s/ElBarrioEnglishOnline">¡Llene Nuestra Encuesta!</a>
-        <!-- <a class="button box-shadow" href="https://www.surveymonkey.com/s/ElBarrioSPANISHOnline">Fill out our survey!</a> -->
-      </div>
-    </div>
     <div class="row">
       <div class="columns medium-4" id="calendar">
         <!-- <h3 class="some-margin-bottom">Upcoming</h3> -->
@@ -231,7 +219,7 @@
         </div>
         <a href="http://www.facebook.com/groups/EastHarlemForum/" class="button box-shadow"><img src="../images/FB-f-Logo__blue_512.png" class="inline-icon"> East Harlem Forum</a>
         <div class="flickr box-shadow">
-          <iframe src="http://www.flickr.com/photos/135123333@N08/20963622391/player/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+          <iframe src="http://www.flickr.com/photos/135123333@N08/22886687187/player/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
         </div>
       </div>
     </div>
