--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <ul class="dropdown">
                 <li><a href="#calendar">Calendar</a></li>
                 <li><a href="#documents">Documents</a></li>
-                <li><a href="#survey">Take Our Survey</a></li>
+                <!-- <li><a href="#survey">Take Our Survey</a></li> -->
               </ul>
             </li>
             <li class=""><a href="#contact">Contact</a></li>
@@ -236,19 +236,6 @@
 
     <hr id="get-involved">
 
-    <div class="row some-margin-bottom">
-      <div class="columns" id="survey">
-        <h3>If you live or work in East Harlem, we want to hear from you.</h3>
-      </div>
-      <div class="columns medium-7">
-        <p class="some-margin-bottom text-large">Please fill out our survey, attend
-          workshops and events, and provide valuable input on our process.</p>
-      </div>
-      <div class="columns medium-5">
-        <a class="button box-shadow" href="https://www.surveymonkey.com/s/ElBarrioEnglishOnline">Fill out our survey!</a>
-        <!-- <a class="button box-shadow" href="https://www.surveymonkey.com/s/ElBarrioSPANISHOnline">Fill out our survey!</a> -->
-      </div>
-    </div>
     <div class="row">
       <div class="columns medium-4" id="calendar">
         <!-- <h3 class="some-margin-bottom">Upcoming</h3> -->
@@ -264,7 +251,7 @@
         </div>
         <a href="http://www.facebook.com/groups/EastHarlemForum/" class="button box-shadow"><img src="images/FB-f-Logo__blue_512.png" class="inline-icon"> East Harlem Forum</a>
         <div class="flickr box-shadow">
-          <iframe src="http://www.flickr.com/photos/135123333@N08/20963622391/player/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+          <iframe src="http://www.flickr.com/photos/135123333@N08/22886687187/player/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
         </div>
       </div>
     </div>
