add recommendations section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <!-- Left Nav Section -->
           <ul class="left">
             <li class=""><a href="#about">About</a></li>
+            <li><a href="#recommendations">Recommendations</a></li>
             <li class="has-dropdown">
               <a href="#get-involved">Get Involved</a>
               <ul class="dropdown">
@@ -233,6 +234,33 @@
         </ol>
       </div>
     </div>
+
+    <hr id="recommendations">
+
+    <div class="row">
+      <div class="columns medium-7">
+        <h3>We need your Feedback!</h3>
+        <p>The East Harlem Neighborhood Plan will include several topic-based objectives and recommendations that have been approved by the Steering Committee. We need your input on these recommendations to understand what community priorities are and to make sure nothing is missing. Read about how the recommendations were developed and the recommendations themselves in the downloadable PDFs for each topic. Please fill out the google form to give your feedback on a topic (one form per topic)!</p>
+        <a class="button large box-shadow" href="https://docs.google.com/forms/d/11H5nzxFJVstNewf6zm-C6YvzVjUOD42J6y0dM-y82iA/viewform">Feedback Form</a>
+      </div>
+      <div class="columns medium-5">
+        <p class="some-margin-top tiny-margin-bottom"><strong>Recommendations:</strong></p>
+        <ul>
+          <li><a href="https://drive.google.com/open?id=0B_MyYsMu9E63b1llQTNhUnkwMk0"><strong>Workforce/Economic Development</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/open?id=0B_MyYsMu9E63VmJBdGJFRTF6R00"><strong>Pre-K/Afterschool/Daycare</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/open?id=0B_MyYsMu9E63ZERPcEZUYVd2YkU"><strong>Schools/Education</strong> <small>(PDF)</small></a></li>
+          <li>NYCHA <small>(Coming Soon)</small></li>
+          <li>Housing Preservation <small>(Coming Soon)</small></li>
+          <li>Open Space <small>(Coming Soon)</small></li>
+          <li>Arts + Culture <small>(Coming Soon)</small></li>
+          <li>Safety <small>(Coming Soon)</small></li>
+          <li>Health/Seniors <small>(Coming Soon)</small></li>
+          <li>Environment/Transportation/Energy <small>(Coming Soon)</small></li>
+          <li>Zoning/Land Use <small>(Coming Soon)</small></li>
+          <li>Affordable Housing Development <small>(Coming Soon)</small></li>
+        </ul>
+      </div>
+</div>
 
     <hr id="get-involved">
 
