fix rec share links

--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
       <div class="columns medium-5">
         <p class="some-margin-top tiny-margin-bottom"><strong>Recommendations:</strong></p>
         <ul>
-          <li><a href="https://drive.google.com/open?id=0B_MyYsMu9E63b1llQTNhUnkwMk0"><strong>Workforce/Economic Development</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/open?id=0B_MyYsMu9E63VmJBdGJFRTF6R00"><strong>Pre-K/Afterschool/Daycare</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/open?id=0B_MyYsMu9E63ZERPcEZUYVd2YkU"><strong>Schools/Education</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63b1llQTNhUnkwMk0/view?usp=sharing"><strong>Workforce/Economic Development</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63VmJBdGJFRTF6R00/view?usp=sharing"><strong>Pre-K/Afterschool/Daycare</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63ZERPcEZUYVd2YkU/view?usp=sharing"><strong>Schools/Education</strong> <small>(PDF)</small></a></li>
           <li>NYCHA <small>(Coming Soon)</small></li>
           <li>Housing Preservation <small>(Coming Soon)</small></li>
           <li>Open Space <small>(Coming Soon)</small></li>
