--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
       <div class="columns medium-5">
         <p class="some-margin-top tiny-margin-bottom"><strong>Recommendations:</strong></p>
         <ul>
-          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63b1llQTNhUnkwMk0/view?usp=sharing"><strong>Workforce/Economic Development</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63VmJBdGJFRTF6R00/view?usp=sharing"><strong>Pre-K/Afterschool/Daycare</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63ZERPcEZUYVd2YkU/view?usp=sharing"><strong>Schools/Education</strong> <small>(PDF)</small></a></li>
-          <li>NYCHA <small>(Coming Soon)</small></li>
-          <li>Housing Preservation <small>(Coming Soon)</small></li>
+          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63b1llQTNhUnkwMk0/view"><strong>Workforce/Economic Development</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63VmJBdGJFRTF6R00/view"><strong>Pre-K/Afterschool/Daycare</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63ZERPcEZUYVd2YkU/view"><strong>Schools/Education</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63M1loZXRabTkzNEk/view"><strong>NYCHA</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63SmtnNGdZM3YwRkE/view"><strong>Housing Preservation</strong> <small>(PDF)</small></a></li>
           <li>Open Space <small>(Coming Soon)</small></li>
           <li>Arts + Culture <small>(Coming Soon)</small></li>
           <li>Safety <small>(Coming Soon)</small></li>
