--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
     </div>
 
     <div class="row full-width callout">
-      <div class="columns large-9 large-centered text-center">
-        <div class="row">
-          <div class="columns medium-6">
-            <h3 class="extra-padding-top extra-padding-bottom">We're working with <span class="underline">you</span> to
-              <span class="nowrap-medium-up">create a</span>
-              neighborhood plan based on
-              <span class="nowrap-medium-up">the needs</span> of the
-              East Harlem community.</h3>
-          </div>
-          <div class="columns medium-6">
-            <!-- Facebook Video -->
-            <div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-video" data-allowfullscreen="1" data-href="/CVHaction/videos/vb.143898596358/10153402834736359/?type=3"><div class="fb-xfbml-parse-ignore"></div></div>
-          </div>
-        </div>
+      <div class="columns large-10 large-centered text-center">
+            <div class="center-box-table">
+              <div class="center-box-cell text">
+                <h3>We're working with <span class="underline">you</span> to
+                  <span class="nowrap-medium-up">create a</span>
+                  neighborhood plan based on
+                  <span class="nowrap-medium-up">the needs</span> of the
+                  East Harlem community.</h3>
+              </div>
+              <div class="center-box-cell video">
+                <!-- Facebook Video -->
+                <div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-video" data-allowfullscreen="1" data-href="/CVHaction/videos/vb.143898596358/10153402834736359/?type=3"><div class="fb-xfbml-parse-ignore"></div></div>
+              </div>
+            </div>
       </div>
     </div>
 
