--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
           <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63ZERPcEZUYVd2YkU/view"><strong>Schools/Education</strong> <small>(PDF)</small></a></li>
           <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63M1loZXRabTkzNEk/view"><strong>NYCHA</strong> <small>(PDF)</small></a></li>
           <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63SmtnNGdZM3YwRkE/view"><strong>Housing Preservation</strong> <small>(PDF)</small></a></li>
-          <li>Open Space <small>(Coming Soon)</small></li>
-          <li>Arts + Culture <small>(Coming Soon)</small></li>
-          <li>Safety <small>(Coming Soon)</small></li>
-          <li>Health/Seniors <small>(Coming Soon)</small></li>
-          <li>Environment/Transportation/Energy <small>(Coming Soon)</small></li>
+          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHMDJrNXBMY2gzQVU/view"><strong>Open Space</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHbW85bkZRajFRTDQ/view"><strong>Arts + Culture</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHS1VnQ1dMZnBTVkk/view"><strong>Safety</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHaVA0VXNGTFlJNkk/view"><strong>Health/Seniors</strong> <small>(PDF)</small></a></li>
+          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHU3A3VlRKUll5Wjg/view"><strong>Environment/Transportation/Energy</strong> <small>(PDF)</small></a></li>
           <li>Zoning/Land Use <small>(Coming Soon)</small></li>
           <li>Affordable Housing Development <small>(Coming Soon)</small></li>
         </ul>
