--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
           <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHS1VnQ1dMZnBTVkk/view"><strong>Safety</strong> <small>(PDF)</small></a></li>
           <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHaVA0VXNGTFlJNkk/view"><strong>Health/Seniors</strong> <small>(PDF)</small></a></li>
           <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHU3A3VlRKUll5Wjg/view"><strong>Environment/Transportation/Energy</strong> <small>(PDF)</small></a></li>
-          <li>Zoning/Land Use <small>(Coming Soon)</small></li>
-          <li>Affordable Housing Development <small>(Coming Soon)</small></li>
+          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHNVE2eVU1Y3JpRnc/view"><strong>Zoning/Land Use/Affordable Housing Development</strong> <small>(PDF)</small></a></li>
         </ul>
       </div>
     </div>
