--- a/index.html
+++ b/index.html
@@ -80,26 +80,69 @@
     <a id="recommendations"></a>
 
     <div class="row">
-      <div class="columns medium-7">
+      <div class="columns">
         <h3>We need your Feedback!</h3>
-        <p>The East Harlem Neighborhood Plan will include several topic-based objectives and recommendations that have been approved by the Steering Committee. We need your input on these recommendations to understand what community priorities are and to make sure nothing is missing. Read about how the recommendations were developed and the recommendations themselves in the downloadable PDFs for each topic. Please fill out the google form to give your feedback on a topic (one form per topic)!</p>
-        <a class="button large box-shadow" href="https://docs.google.com/forms/d/11H5nzxFJVstNewf6zm-C6YvzVjUOD42J6y0dM-y82iA/viewform">Feedback Form</a>
+        <p class="text-large full-width no-margin-bottom">The East Harlem Neighborhood Plan has developed topic-specific objectives and recommendations that have been approved by the Steering Committee. We are collecting feedback at the community forum on <strong>January 27</strong>. In the meantime, please help prioritize these recommendations using these online polls.</p>
+        <p class="full-width text-right some-margin-bottom"><small><em><strong>* Powered by D21</strong></em></small></p>
       </div>
-      <div class="columns medium-5">
-        <p class="some-margin-top tiny-margin-bottom"><strong>Recommendations:</strong></p>
-        <ul>
-          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63b1llQTNhUnkwMk0/view"><strong>Workforce/Economic Development</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63VmJBdGJFRTF6R00/view"><strong>Pre-K/Afterschool/Daycare</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63ZERPcEZUYVd2YkU/view"><strong>Schools/Education</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63M1loZXRabTkzNEk/view"><strong>NYCHA</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B_MyYsMu9E63SmtnNGdZM3YwRkE/view"><strong>Housing Preservation</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHMDJrNXBMY2gzQVU/view"><strong>Open Space</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHbW85bkZRajFRTDQ/view"><strong>Arts + Culture</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHS1VnQ1dMZnBTVkk/view"><strong>Safety</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHaVA0VXNGTFlJNkk/view"><strong>Health/Seniors</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHU3A3VlRKUll5Wjg/view"><strong>Environment/Transportation/Energy</strong> <small>(PDF)</small></a></li>
-          <li><a href="https://drive.google.com/file/d/0B9LJ90BaDIDHem9wZFJQdGl5OWM/view"><strong>Zoning/Land Use/Affordable Housing Development</strong> <small>(PDF)</small></a></li>
-        </ul>
+      <div class="columns large-5">
+        <p>For each poll, you're given “plus votes” and “minus votes” (indicated by a + or -). Use plus votes to identify which objectives or recommendations you most want to prioritize for implementation. Une minus votes to identify recommendations that you disagree with. The number of + and – votes you have is limited, so use them wisely.</p>
+        <p class="text-large"><strong>These polls will close at 11:59pm on January 31.</strong></p>
+        <p>The Steering Committee will then review these priorities and use your feedback to strengthen the final plan.</p>
+      </div>
+      <div class="columns large-7">
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63b1llQTNhUnkwMk0/view">Workforce/Economic Development <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom disabled" href="#" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63VmJBdGJFRTF6R00/view">Pre-K/Afterschool/Daycare <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/41yQYihOl" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63ZERPcEZUYVd2YkU/view">Schools/Education <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VJ3a_s2dl" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63M1loZXRabTkzNEk/view">NYCHA <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NJtedj3de" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5>Small Business</h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/Ey9Y_j3_e" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B_MyYsMu9E63SmtnNGdZM3YwRkE/view">Housing Preservation <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyK6Sjn_g" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHMDJrNXBMY2gzQVU/view">Open Space <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/VkqUEoh_l" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHbW85bkZRajFRTDQ/view">Arts + Culture <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4kCJNjhOe" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHS1VnQ1dMZnBTVkk/view">Safety <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyL2Kinux" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHaVA0VXNGTFlJNkk/view">Health/Seniors <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/V11eqjh_g" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5>Affordable Housing</h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NJ2Xcj2_g" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHU3A3VlRKUll5Wjg/view">Environment/Transportation/Energy <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/4JD_Ysnug" target="_blank">Take the Poll</a></div>
+        </div>
+        <div class="row collapse">
+          <div class="medium-8 columns"><h5><a class="" href="https://drive.google.com/file/d/0B9LJ90BaDIDHem9wZFJQdGl5OWM/view">Zoning/Land Use/Affordable Housing Development <small>(PDF)</small></a></h5></div>
+          <div class="medium-4 columns"><a class="button expand tiny-padding tiny-margin-bottom" href="https://www.d21.me/vote/NyU_9snux" target="_blank">Take the Poll</a></div>
+        </div>
       </div>
     </div>
 
